bug fix horizontal alignment

--- a/css/style.css
+++ b/css/style.css
@@ -554,7 +554,7 @@ section {
     padding: 10px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: left;
     flex-wrap: nowrap;
     /* Prevent wrapping */
     overflow-x: auto;
@@ -580,6 +580,7 @@ section {
 
 /* Skill Card Styles */
 .skill-card {
+    scroll-snap-align: start;
     background-color: #2c2c2c;
     border: 2px solid transparent;
     border-radius: 10px;
